examples/invalid/unquoted_dash_key.jasn
// Keys with dashes must be quoted
{
  kebab-case: "not allowed"
}
